--- a/static/detail/css/navbard.css
+++ b/static/detail/css/navbard.css
@@ -25,15 +25,18 @@
     position: absolute;
   }
 }
+
 .moviverse-nav.scrolled {
   background: #000 url(../../user/images/broken_noise.png) repeat;
   top: -82px;
 }
+
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
   .moviverse-nav.scrolled {
     background: #000 url(../../user/images/broken_noise.png) repeat;
   }
 }
+
 @media screen and (max-width: 480px) {
   .moviverse-nav.scrolled {
     background: transparent;
@@ -45,21 +48,25 @@
     display: none;
   }
 }
+
 .moviverse-nav ul {
   padding: 0;
   margin: 5px 0 0 0;
 }
+
 .moviverse-nav ul li {
   padding: 0;
   margin: 0;
   list-style: none;
   display: inline;
 }
+
 .moviverse-nav ul li > a {
   text-transform: uppercase;
   letter-spacing: 1px;
   font-size: 14px;
 }
+
 .moviverse-nav ul li a {
   padding: 30px 15px;
   color: rgba(255, 255, 255, 0.7);
@@ -67,18 +74,27 @@
   -o-transition: 0.5s;
   transition: 0.5s;
 }
+
 .scrolled .moviverse-nav ul li a {
   color: rgba(0, 0, 0, 0.7);
 }
-.moviverse-nav ul li a:hover, .moviverse-nav ul li a:focus, .moviverse-nav ul li a:active {
+
+.moviverse-nav ul li a:hover,
+.moviverse-nav ul li a:focus,
+.moviverse-nav ul li a:active {
   color: white;
 }
-.scrolled .moviverse-nav ul li a:hover, .scrolled .moviverse-nav ul li a:focus, .scrolled .moviverse-nav ul li a:active {
+
+.scrolled .moviverse-nav ul li a:hover,
+.scrolled .moviverse-nav ul li a:focus,
+.scrolled .moviverse-nav ul li a:active {
   color: black;
 }
+
 .moviverse-nav ul li.has-dropdown {
   position: relative;
 }
+
 .moviverse-nav ul li.has-dropdown .dropdown {
   width: 140px;
   -webkit-box-shadow: 0px 14px 16px -9px rgba(0, 0, 0, 0.75);
@@ -101,6 +117,7 @@
   -o-transition: 0s;
   transition: 0s;
 }
+
 .moviverse-nav ul li.has-dropdown .dropdown:before {
   bottom: 100%;
   left: 40px;
@@ -114,13 +131,16 @@
   border-width: 8px;
   margin-left: -8px;
 }
+
 .moviverse-nav ul li.has-dropdown .dropdown li {
   display: block;
   margin-bottom: 7px;
 }
+
 .moviverse-nav ul li.has-dropdown .dropdown li:last-child {
   margin-bottom: 0;
 }
+
 .moviverse-nav ul li.has-dropdown .dropdown li a {
   font-size: 17px;
   padding: 2px 0;
@@ -130,22 +150,30 @@
   text-transform: none;
   letter-spacing: 0;
 }
+
 .moviverse-nav ul li.has-dropdown .dropdown li a:hover {
   color: #fff;
 }
-.moviverse-nav ul li.has-dropdown:hover a, .moviverse-nav ul li.has-dropdown:focus a {
+
+.moviverse-nav ul li.has-dropdown:hover a,
+.moviverse-nav ul li.has-dropdown:focus a {
   color: #fff;
 }
-.scrolled .moviverse-nav ul li.has-dropdown:hover a, .scrolled .moviverse-nav ul li.has-dropdown:focus a {
+
+.scrolled .moviverse-nav ul li.has-dropdown:hover a,
+.scrolled .moviverse-nav ul li.has-dropdown:focus a {
   color: rgba(0, 0, 0, 0.7);
 }
+
 .moviverse-nav ul li.active > a {
   color: #fff;
   position: relative;
 }
+
 .scrolled .moviverse-nav ul li.active > a {
   color: rgba(0, 0, 0, 0.7);
 }
+
 .moviverse-nav ul li.active > a:after {
   position: absolute;
   bottom: 25px;
