[REFACTOR] Changing copywriting

--- a/main/templates/landing.html
+++ b/main/templates/landing.html
@@ -56,7 +56,7 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="header-text" aria-hidden="true">
-								Embark on a journey of imagination with
+								Unleash your Imagination with
 								<br>
 								<span class="glow-filter" data-text="MoviVerse">MoviVerse</span>
 								<br>
