--- a/static/main/css/card.css
+++ b/static/main/css/card.css
@@ -1,5 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+#moviesContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin: 20px;
+}
+
+.movie-placeholder {
+    width: 100%;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #eee;
+    color: #888;
+    font-size: 14px;
+    text-align: center;
+}
+
+.movie-placeholder svg {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 10px;
+    fill: #888;
+}
+
 .card {
     background: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #f8ef6f 95%);
     width: 200px;
