--- a/static/main/css/button.css
+++ b/static/main/css/button.css
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+ :root {
+	 --color-main: #a474ff;
+	 --color-main-second: #17f1d1;
+	 --color-main-third: crimson;
+}
+
 .container {
-    padding-top: 5%;
+    padding-top: 2%;
     padding-bottom: 1%;
     display: flex;
     justify-content: center;
