--- a/static/main/css/card.css
+++ b/static/main/css/card.css
@@ -8,34 +8,13 @@
     margin: 20px;
 }
 
-.movie-placeholder {
-    width: 100%;
-    height: 300px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #eee;
-    color: #888;
-    font-size: 14px;
-    text-align: center;
-}
-
-.movie-placeholder svg {
-    width: 50px;
-    height: 50px;
-    margin-bottom: 10px;
-    fill: #888;
-}
-
 .card {
     background: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #f8ef6f 95%);
     width: 200px;
-    height: 455px;
+    height: 380px;
     border-radius: 12px;
     overflow: hidden;
     position: relative;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
 
@@ -47,10 +26,10 @@
     right: 0;
     display: flex;
     flex-direction: column; 
-    justify-content: center; 
-    align-items: center;
+    justify-content: left; 
+    align-items: left;
     padding: 0px 0px 15px 0px;
-    background-color: #222222;
+    background: #000 url(../../user/images/broken_noise.png) repeat;
     color: #ffffff;
     border-radius: 12px;
     overflow: hidden;
@@ -62,17 +41,46 @@
     inset: 3px;
 }
 
+.card-link {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+}
+
 .card img {
     width: 100%;
-    height: 100%; 
-    border-radius: 15px 15px 0 0; 
+    height: 80%; 
+    border-radius: 15px 15px 15px 15px; 
+}
+
+.card-link {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+}
+.card-title {
+    font-size: 18px;
+    margin: 5px 0 0 0;
+    transition: color 0.3s ease;
+}
+
+.card-title:hover {
+    color: crimson;
+}
+
+.card-year {
+    align-items: start;
+    text-align: left;
+    font-size: 14px;
+    color: #bbb;
+    margin: 5px 0 0 0;
 }
 
 .card-title-wrapper {
+    text-align: left;
     width: 100%;
-    height: 60px;
+    height: 40px;
     box-sizing: border-box;
-    display: flex;
     justify-content: center; 
     align-items: flex-start; 
     overflow-y: auto;
@@ -92,25 +100,4 @@
 
 .card-title-wrapper::-webkit-scrollbar-track {
     background: #222;
-}
-
-.card h3 {
-    font-size: 18px;
-    color: #fff;
-    text-align: center;
-    line-height: 1.2;
-    margin: 0;
-    white-space: normal;
-}
-
-.movie-placeholder {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    background-color: #444;
-    border-radius: 12px 12px 0 0;
-    color: #fff;
-    font-size: 14px;
 }
