--- a/static/detail/css/actor.css
+++ b/static/detail/css/actor.css
@@ -42,9 +42,10 @@
 
 .movie__director{
   display: flex;
-  text-align: left;
+  text-align: center;
   flex-direction: column; 
   align-items: left;
+  justify-content: flex-start;
   margin: 16px 0;
 }
 
@@ -61,6 +62,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    align-items: center;
 }
 
 .movie__director a,
@@ -83,7 +85,7 @@
     font-weight: normal;
     font-size: 14px;
     cursor: default;
-  }
+}
   
 .movie__actor a.disabled:hover {
     color: #999; 
