--- a/static/detail/css/detail.css
+++ b/static/detail/css/detail.css
@@ -140,7 +140,7 @@ a{
 
 @media (min-width: 600px) {
   .movie__poster--fill {
-    top: -20%;
+    top: -60%;
     width: 100%;
   }
 }
@@ -155,7 +155,7 @@ a{
 
 .movie__poster--featured {
   position: relative;
-  align-self: center;
+  align-self: flex-start;
   overflow: hidden;
   margin-top: 84px; 
   margin-left: 24px; 
@@ -169,7 +169,6 @@ a{
 @media (min-width: 600px) {
   .movie__poster--featured {
     left: 56px; 
-    margin: auto;
   }
 }
 
