[REFACTOR] Penambahan foto DOP

--- a/static/detail/css/detail.css
+++ b/static/detail/css/detail.css
@@ -157,7 +157,7 @@ a{
   position: relative;
   align-self: flex-start;
   overflow: hidden;
-  margin-top: 84px; 
+  margin-top: 50%; 
   margin-left: 24px; 
   width: 140px; 
   background-color: gainsboro;
