--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -58,10 +58,24 @@
         <div id="search-section" class="searchContainer">
             <input type="text" id="search" placeholder="Search for movies..." value="{{ search }}" />
             <button type="button" class="search" aria-label="Search" onclick="searchMovies()"></button>
-        </div>     
+        </div>    
+        
+        <!-- Sort Dropdown -->
+        <div id="sort-section" class="sortContainer">
+            <label for="sort">Sort by:</label>
+            <select id="sort" onchange="resetPageAndFetch()">
+                <option value="">Select</option>
+                <option value="title_asc">Alphabet A-Z</option>
+                <option value="title_desc">Alphabet Z-A</option>
+                <option value="release_year">Release Year</option>
+                <option value="rating">Rating</option>
+                <option value="international_sales">International Sales</option>
+                <option value="budget">Budget</option>
+            </select>
+        </div>
         
         <div id="moviesContainer">
-            <!-- Movie cards will appear here -->
+            <!-- Movie cards akan tampil disini -->
         </div>
         
         <div id="pagination">
@@ -122,7 +136,11 @@
                     document.getElementById("moviesContainer").innerHTML = "<p>Error fetching data. Please try again later.</p>";
                 }
             }
-            
+
+            function resetPageAndFetch() {
+                page = 1; 
+                fetchResult();
+            }
 
             function searchMovies() {
                 const searchInput = document.getElementById("search");
