--- a/static/main/css/searchbar.css
+++ b/static/main/css/searchbar.css
@@ -2,6 +2,7 @@
 
 #search-section {
   margin-top: 10%; 
+  margin-bottom: 2%;
   display: flex;
   justify-content: center;
   align-items: center;
